--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 <h1>User, welcome spring boot security page!</h1>
-
-
+Имя :<span th:text="${_user.getName()}"/><br>
+Возраст :<span th:text="${_user.getAge()}"/><br>
+Email :<span th:text="${_user.getEmail()}"/><br>
+Роль :<span th:text="${_user.getRoleSet()}"/><br>
+<div th:replace ="include/lgt :: copy"></div>
 </body>
 </html>
